# MITK-ProjectTemplate

./: .arcconfig  CMakeLists.txt  Changelog.txt  LICENSE.txt  README  README.markdown  README.md  SuperBuild.cmake
.github/workflows/: branch_name.yml  commit_msg.yml
Applications/: AppList.cmake
Applications/ExampleApp/: CMakeLists.txt  target_libraries.cmake
Applications/ExampleApp/src/: MainWindow.cpp  MainWindow.h  main.cpp
Apps/: Apps.cmake  CMakeLists.txt
Apps/AwesomeApp/: AwesomeApp.cpp  CMakeLists.txt  startAwesomeApp.bat.in  target_libraries.cmake
CMake/: CPackSetup.cmake  FindGuidelinesSupportLibrary.cmake
CMake/PackageDepends/: MITK_GuidelinesSupportLibrary_Config.cmake
CMakeExternals/: ExternalProjectList.cmake  GuidelinesSupportLibrary.cmake  MITK.cmake
CMakeExternals/Customization/: ITK.cmake
Documentation/: CMakeLists.txt  doxygen.conf.in
Documentation/Doxygen/: Portal.dox
Modules/: CMakeLists.txt  ModuleList.cmake
Modules/ExampleModule/: CMakeLists.txt  files.cmake
Modules/ExampleModule/cmdapps/: CMakeLists.txt  ExampleCmdApp.cpp
Modules/ExampleModule/include/: ExampleImageFilter.h  ExampleImageInteractor.h  ExampleModule.h  ExampleSegTool2D.h  ExampleSegTool2DGUI.h
Modules/ExampleModule/resource/Interactions/: Paint.xml
Modules/ExampleModule/src/: ExampleImageFilter.cpp  ExampleImageInteractor.cpp  ExampleModule.cpp  ExampleSegTool2D.cpp  ExampleSegTool2DGUI.cpp  ExampleSegTool2DGUI.ui
Modules/MyAwesomeLib/: AwesomeImageFilter.cpp  AwesomeImageFilter.h  CMakeLists.txt  files.cmake
Modules/MyAwesomeLib/cmdapps/: CMakeLists.txt  OffsetImageCmdApp.cpp
Modules/MyAwesomeLib/include/: AwesomeImageFilter.h
Modules/MyAwesomeLib/src/: AwesomeImageInteractor.cpp
Plugins/: PluginList.cmake  Plugins.cmake
Plugins/it.unito.kmaps.app/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/it.unito.kmaps.app/documentation/: KMapsQtHelpCollectionProject.qhcp
Plugins/it.unito.kmaps.app/documentation/UserManual/: QmitkExtapplicationUserManual.dox
Plugins/it.unito.kmaps.app/documentation/doxygen/: modules.dox
Plugins/it.unito.kmaps.app/resources/: KMapsApplication.qrc
Plugins/it.unito.kmaps.app/src/: KMapsApplication.cpp  KMapsApplication.h  KMapsFileOpenAction.cpp  KMapsFileOpenAction.h  KMapsFileSaveProjectAction.cpp  KMapsFileSaveProjectAction.h  KMapsPerspective.cpp  KMapsPerspective.h  KMapsWorkbenchAdvisor.cpp  KMapsWorkbenchAdvisor.h  KMapsWorkbenchWindowAdvisor.cpp  KMapsWorkbenchWindowAdvisor.h
Plugins/it.unito.kmaps.app/src/internal/: KMapsApplicationPlugin.cpp  KMapsApplicationPlugin.h  KMapsPerspective.cpp  KMapsPerspective.h  KMapsWorkbenchWindowAdvisorHack.h
Plugins/my.awesomeproject.exampleapp/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/my.awesomeproject.exampleapp/documentation/: AwesomeQtHelpCollectionProject.qhcp  ExampleAppQtHelpCollectionProject.qhcp
Plugins/my.awesomeproject.exampleapp/documentation/UserManual/: QmitkExtapplicationUserManual.dox
Plugins/my.awesomeproject.exampleapp/documentation/doxygen/: modules.dox
Plugins/my.awesomeproject.exampleapp/resources/: AwesomeApplication.qrc  ExampleApp.qrc
Plugins/my.awesomeproject.exampleapp/src/: QmitkAwesomeApplication.h  QmitkAwesomeFileOpenAction.cpp  QmitkAwesomeFileOpenAction.h  QmitkAwesomeFileSaveProjectAction.cpp  QmitkAwesomeFileSaveProjectAction.h  QmitkAwesomeWorkbenchAdvisor.cpp  QmitkAwesomeWorkbenchAdvisor.h  QmitkAwesomeWorkbenchWindowAdvisor.cpp  QmitkAwesomeWorkbenchWindowAdvisor.h
Plugins/my.awesomeproject.exampleapp/src/internal/: QmitkAwesomeApplication.cpp  QmitkAwesomeApplication.h  QmitkAwesomePerspective.cpp  QmitkAwesomePerspective.h  QmitkAwesomeWorkbenchAdvisor.cpp  QmitkAwesomeWorkbenchAdvisor.h  QmitkAwesomeWorkbenchWindowAdvisor.h  QmitkAwesomeWorkbenchWindowAdvisorHack.h  mitkExampleAppPluginActivator.cpp  mitkExampleAppPluginActivator.h
Plugins/my.awesomeproject.exampleplugin/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/my.awesomeproject.exampleplugin/documentation/Manual/: Manual.dox
Plugins/my.awesomeproject.exampleplugin/documentation/UserManual/: Manual.dox
Plugins/my.awesomeproject.exampleplugin/documentation/doxygen/: modules.dox
Plugins/my.awesomeproject.exampleplugin/src/: AwesomeView.cpp  AwesomeView.h
Plugins/my.awesomeproject.exampleplugin/src/internal/: AwesomeView.cpp  AwesomeView.h  AwesomeViewControls.ui  QmitkAwesomeView.cpp  QmitkAwesomeView.h  QmitkAwesomeViewControls.ui  mitkPluginActivator.cpp  mitkPluginActivator.h  my_awesomeproject_exampleplugin_PluginActivator.cpp  my_awesomeproject_exampleplugin_PluginActivator.h
Plugins/my.awesomeproject.renderwindoweditor/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/my.awesomeproject.renderwindoweditor/src/internal/: QmitkAwesomeRenderWindowEditor.cpp  QmitkAwesomeRenderWindowEditor.h  my_awesomeproject_renderwindoweditor_Activator.cpp  my_awesomeproject_renderwindoweditor_Activator.h
Plugins/org.mitk.exampleplugin.eageractivation/: CMakeLists.txt  files.cmake  manifest_headers.cmake
Plugins/org.mitk.exampleplugin.eageractivation/src/internal/: PluginActivator.cpp  (+1 more)
Plugins/org.mitk.gui.qt.exampleplugin/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
(+6 files in other folders)
